# LocusQ

./: .gitignore  AGENTS.md  AGENT_RULE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEX.md  README.md  SKILLS.md  TODO.md  status.json
.claude/rules/: agent.md
.codex/: WEBVIEW-DOCUMENTATION-SUMMARY.md  WEBVIEW_FRAMEWORK_ANALYSIS.md  settings.local.json
.codex/guides/: documentation-system.md  state-management-guide.md
.codex/rules/: agent.md  (+2 more)
.githooks/: pre-commit
.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
Design/: HANDOFF.md  v1-style-guide.md  v1-test.html  v1-ui-spec.md  v2-style-guide.md  v2-test.html  v2-ui-spec.md  v3-style-guide.md  v3-test.html  v3-ui-spec.md
Documentation/: Doxyfile  README.md  adr-index.md  architecture-review-and-roadmap-2026-02-21.md  backlog-post-v1-agentic-sprints.md  full-project-review-2026-02-20.md  full-project-review-design-2026-02-20.md  implementation-traceability.md  invariants.md  lessons-learned.md  scene-state-contract.md  skill-selection-matrix.md  spatial-audio-profiles-usage.md  stage14-comprehensive-review-2026-02-20.md  stage14-review-release-checklist.md  standards.md  v3-stage-9-plus-detailed-checklists.md  v3-ui-parity-checklist.md
Resources/: LocusQ.icns
Source/: AirAbsorption.h  CalibrationEngine.h  DirectivityFilter.h  DistanceAttenuator.h  DopplerProcessor.h  EarlyReflections.h  FDNReverb.h  HeadPoseInterpolator.h  HeadTrackingBridge.h  IRCapture.h  KeyframeTimeline.cpp  KeyframeTimeline.h  PhysicsEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QuadSpeakerLayout.h  RoomAnalyzer.h  RoomProfileSerializer.h  SceneGraph.h  SharedPtrAtomicContract.h  SpatialRenderer.h  SpreadProcessor.h  SteamAudioVirtualSurround.h  TestSignalGenerator.h  VBAPPanner.h  VisualTokenScheduler.h
TestEvidence/: PHASE_2_3_VALIDATION.md  build-summary.md  clap-validation-report-2026-02-22.md  locusq_incremental_stage12_selftest_20260220T193020Z.json  locusq_incremental_stage12_selftest_20260220T193031Z.json  locusq_production_p0_selftest_20260225T030734Z.attempts.tsv  locusq_production_p0_selftest_20260225T030734Z.meta.json  locusq_production_p0_selftest_20260225T030738Z.attempts.tsv  locusq_production_p0_selftest_20260225T030738Z.meta.json  locusq_production_p0_selftest_20260225T030741Z.attempts.tsv  locusq_production_p0_selftest_20260225T030741Z.meta.json  locusq_production_p0_selftest_20260225T030745Z.attempts.tsv  locusq_production_p0_selftest_20260225T030745Z.meta.json  locusq_production_p0_selftest_20260225T030748Z.attempts.tsv  locusq_production_p0_selftest_20260225T030748Z.meta.json  locusq_production_p0_selftest_20260225T030752Z.attempts.tsv  locusq_production_p0_selftest_20260225T030752Z.meta.json  locusq_production_p0_selftest_20260225T030755Z.attempts.tsv  locusq_production_p0_selftest_20260225T030755Z.meta.json  locusq_production_p0_selftest_20260225T030759Z.attempts.tsv  locusq_production_p0_selftest_20260225T030759Z.meta.json  locusq_production_p0_selftest_20260225T030802Z.attempts.tsv  locusq_production_p0_selftest_20260225T030802Z.meta.json  locusq_production_p0_selftest_20260225T030806Z.attempts.tsv  locusq_production_p0_selftest_20260225T030806Z.meta.json  locusq_production_p0_selftest_20260225T030822Z.attempts.tsv  locusq_production_p0_selftest_20260225T030822Z.meta.json  locusq_production_p0_selftest_20260225T030825Z.attempts.tsv  locusq_production_p0_selftest_20260225T030825Z.meta.json  locusq_production_p0_selftest_20260225T030829Z.attempts.tsv  locusq_production_p0_selftest_20260225T030829Z.meta.json  locusq_production_p0_selftest_20260225T030832Z.attempts.tsv  locusq_production_p0_selftest_20260225T030832Z.meta.json  locusq_production_p0_selftest_20260225T030835Z.attempts.tsv  locusq_production_p0_selftest_20260225T030835Z.meta.json  locusq_production_p0_selftest_20260225T030845Z.attempts.tsv  locusq_production_p0_selftest_20260225T030845Z.meta.json  locusq_production_p0_selftest_20260225T031133Z.attempts.tsv  locusq_production_p0_selftest_20260225T031133Z.meta.json  locusq_production_p0_selftest_20260225T031138Z.attempts.tsv  (+642 more)
build_bl010/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_bl013_hostrunner/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_bl019/: CMakeCache.txt  Makefile  cmake_install.cmake
build_no_clap_check/: CMakeCache.txt  LocusQ_vst3_helper  Makefile  cmake_install.cmake
companion/: MANUAL.md  Package.swift  README.md
qa/: bl018_profile_probe_main.cpp  locusq_adapter.cpp  locusq_adapter.h  main.cpp  physics_probe_main.cpp
qa_output/: suite_result.json
scripts/: append-stage16a-emit-dir-trend.sh  appium-mac2-ui-regression.sh  backlog-plain-language-normalize.py  build-and-install-mac.sh  capture-headtracking-rotation-mac.sh  codex-init  codex-session-bootstrap.sh  diagnose-reaper-bootstrap-abrt-mac.sh  diagnose-selftest-abrt-mac.sh  git-artifact-cleanup-index.sh  git-artifact-hygiene-audit.sh  git-artifact-hygiene-guard.sh  install-git-hygiene-hooks.sh  install-steam-audio-sdk.sh  launch-preview.sh  new-backlog-item.py  qa-bl009-headphone-contract-mac.sh  qa-bl009-headphone-profile-contract-mac.sh  qa-bl011-clap-closeout-mac.sh  qa-bl012-harness-backport-tranche1-mac.sh  qa-bl013-hostrunner-feasibility-mac.sh  qa-bl018-ambisonic-contract-mac.sh  qa-bl018-profile-matrix-strict-mac.sh  qa-bl020-confidence-masking-lane-mac.sh  qa-bl021-room-story-overlays-lane-mac.sh  qa-bl023-resize-dpi-matrix-mac.sh  qa-bl024-reaper-automation-lane-mac.sh  qa-bl028-output-matrix-lane-mac.sh  qa-bl029-audition-platform-lane-mac.sh  qa-bl029-reliability-gate-mac.sh  qa-bl030-device-matrix-capture-mac.sh  qa-bl030-manual-evidence-pack-mac.sh  qa-bl030-manual-evidence-validate-mac.sh  qa-bl030-pluginval-stability-mac.sh  qa-bl030-rl05-replay-reconcile-mac.sh  qa-bl031-tempo-token-lane-mac.sh  qa-bl032-structure-guardrails-mac.sh  qa-bl033-headphone-core-lane-mac.sh  qa-bl034-headphone-verification-lane-mac.sh  qa-bl036-finite-output-lane-mac.sh  (+52 more)
(+1093 files in other folders)
